--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,13 +1,35 @@
 .Weather {
-  border: 1px solid #969696;
+  border: 1px solid #dadde1;
+  border-radius: 4px;
+  color: #878787;
+  font-family: arial, sans-serif;
+  padding: 16px;
+}
+
+.Weather h2 {
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 26px;
+  padding-top: 20px;
 }
 
 .Weather li {
+  font-size: 12px;
+  line-height: 16px;
+  list-style: none;
   list-style-position: initial;
-  list-style-type: none;
 }
 
 .Weather ul {
-  padding: 0;
   list-style: none;
+  padding: 0;
+}
+.Weather .temperature {
+  color: black;
+  font-size: 64px;
+  font-weight: 400;
+}
+
+.Weather .units {
+  font-size: 16px;
 }
