--- a/src/Weather.css
+++ b/src/Weather.css
@@ -24,12 +24,16 @@
   padding: 0;
 }
 
+.Weather p {
+  margin-bottom: 0;
+}
+
 .Weather img {
-  margin-right: 10px;
   display: inline-block;
   height: 60px;
+  margin-top: -5px;
   vertical-align: top;
-  width: 64px;
+  width: 60px;
 }
 
 .Weather .temperature {
@@ -45,10 +49,4 @@
   line-height: 1;
   margin: 6px 0px 0px 3px;
   vertical-align: top;
-}
-
-.spinner {
-  display: flex;
-  padding: 50px;
-  justify-content: center;
 }
