--- a/src/Weather.css
+++ b/src/Weather.css
@@ -28,7 +28,7 @@
   margin-bottom: 0;
 }
 
-.Weather img {
+.Weather .img-icon {
   display: inline-block;
   height: 60px;
   margin-top: -5px;
@@ -38,9 +38,11 @@
 
 .Weather .temperature {
   color: black;
-  font-size: 64px;
+  display: inline-block;
+  font-size: 60px;
   font-weight: 400;
-  line-height: 64px;
+  line-height: 60px;
+  vertical-align: top;
 }
 
 .Weather .units {
