--- a/src/Weather.css
+++ b/src/Weather.css
@@ -6,6 +6,10 @@
   padding: 16px;
 }
 
+.Weather .WeatherInfo {
+  margin-bottom: 40px;
+}
+
 .Weather h2 {
   font-size: 24px;
   font-weight: 400;
