--- a/src/WeatherForecast.css
+++ b/src/WeatherForecast.css
@@ -1,10 +1,16 @@
 .WeatherForecast {
+  font-size: 12px;
   text-align: center;
 }
 
 .WeatherForecast-day .WeatherForecast-day {
   line-height: 15px;
   padding-top: 7px;
+}
+
+.WeatherForecast .WeatherForecast-icon {
+  margin-top: -15px;
+  margin-bottom: -10px;
 }
 
 .WeatherForecast .WeatherForecast-temperatures {
