Reduced size of forecast img icon

--- a/src/WeatherForecast.css
+++ b/src/WeatherForecast.css
@@ -13,6 +13,10 @@
   margin-bottom: -10px;
 }
 
+.WeatherForecast img {
+  height: 60px;
+}
+
 .WeatherForecast .WeatherForecast-temperatures {
   display: inline;
   font-size: 13px;
